--- a/estilos/style.css
+++ b/estilos/style.css
@@ -108,7 +108,7 @@ footer{
 }
 footer h3{
     margin-bottom: 0px;
-    text-align: center;
+    text-align: right;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
